recursion.cons.last.Last.scala.error
Compilation error:
Last:12: error: type mismatch;
 found   : List[Int]
 required: Int
    l.tail
      ^